--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -102,9 +102,6 @@
     <ClCompile Include="..\source\TransportManager.cpp">
       <Filter>game\combat\micro</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\BuildOrderGoalManager.cpp">
-      <Filter>game\macro\buildorders</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\BuildOrderQueue.cpp">
       <Filter>game\macro\buildorders</Filter>
     </ClCompile>
@@ -116,9 +113,6 @@
     </ClCompile>
     <ClCompile Include="..\source\MetaType.cpp">
       <Filter>game\macro</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\Logger.cpp">
-      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\source\TimerManager.cpp">
       <Filter>game\util</Filter>
@@ -155,6 +149,9 @@
     </ClCompile>
     <ClCompile Include="..\Source\MedicManager.cpp">
       <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\Logger.cpp">
+      <Filter>util</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -227,9 +224,6 @@
     <ClInclude Include="..\source\ScoutManager.h">
       <Filter>game\combat\micro</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\BuildOrderGoalManager.h">
-      <Filter>game\macro\buildorders</Filter>
-    </ClInclude>
     <ClInclude Include="..\source\BuildOrderQueue.h">
       <Filter>game\macro\buildorders</Filter>
     </ClInclude>
@@ -241,9 +235,6 @@
     </ClInclude>
     <ClInclude Include="..\source\MetaType.h">
       <Filter>game\macro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\Logger.h">
-      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\source\TimerManager.h">
       <Filter>game\util</Filter>
@@ -280,6 +271,9 @@
     </ClInclude>
     <ClInclude Include="..\Source\MedicManager.h">
       <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Logger.h">
+      <Filter>util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
