--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="..\Source\LurkerManager.cpp">
       <Filter>game\combat\micro</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\UpgradeOrder.cpp">
+      <Filter>game\macro\buildorders</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\CombatCommander.h">
@@ -280,6 +283,9 @@
     </ClInclude>
     <ClInclude Include="..\Source\LurkerManager.h">
       <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\UpgradeOrder.h">
+      <Filter>game\macro\buildorders</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
