--- a/SparCraft/VisualStudio/SparCraft.vcxproj
+++ b/SparCraft/VisualStudio/SparCraft.vcxproj
@@ -73,7 +73,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(SDL_IMAGE_DIR);$(SDL_GFX_DIR);$(SDL_DIR)/include;$(BWAPI_DIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(BWAPI_DIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -96,7 +96,7 @@
     <ClCompile>
       <Optimization>Full</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(BWAPI_DIR);$(BWAPI_DIR)\include;$(SDL_DIR)\include;$(SDL_IMAGE_DIR);$(SDL_GFX_DIR);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(BWAPI_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;NOMINMAX;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -122,17 +122,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\source\Action.h" />
     <ClInclude Include="..\source\AllPlayers.h" />
+    <ClInclude Include="..\source\AlphaBetaMove.h" />
     <ClInclude Include="..\source\AlphaBetaSearch.h" />
     <ClInclude Include="..\source\AlphaBetaSearchParameters.hpp" />
     <ClInclude Include="..\source\AlphaBetaSearchResults.hpp" />
     <ClInclude Include="..\source\AnimationFrameData.h" />
     <ClInclude Include="..\source\BaseTypes.hpp" />
-    <ClInclude Include="..\source\Display.h" />
     <ClInclude Include="..\source\EnumData.h" />
     <ClInclude Include="..\source\Game.h" />
     <ClInclude Include="..\source\GameState.h" />
-    <ClInclude Include="..\source\glfont\glfont.h" />
     <ClInclude Include="..\source\GraphViz.hpp" />
     <ClInclude Include="..\source\Hash.h" />
     <ClInclude Include="..\source\Logger.h" />
@@ -166,21 +166,20 @@
     <ClInclude Include="..\source\UCTSearchResults.hpp" />
     <ClInclude Include="..\source\Unit.h" />
     <ClInclude Include="..\source\Array.hpp" />
-    <ClInclude Include="..\source\UnitAction.hpp" />
     <ClInclude Include="..\source\UnitProperties.h" />
     <ClInclude Include="..\source\UnitScriptData.h" />
     <ClInclude Include="..\source\WeaponProperties.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\source\Action.cpp" />
     <ClCompile Include="..\source\AllPlayers.cpp" />
+    <ClCompile Include="..\source\AlphaBetaMove.cpp" />
     <ClCompile Include="..\source\AlphaBetaSearch.cpp" />
     <ClCompile Include="..\source\AnimationFrameData.cpp" />
     <ClCompile Include="..\source\Common.cpp" />
-    <ClCompile Include="..\source\Display.cpp" />
     <ClCompile Include="..\source\EnumData.cpp" />
     <ClCompile Include="..\source\Game.cpp" />
     <ClCompile Include="..\source\GameState.cpp" />
-    <ClCompile Include="..\source\glfont\glfont.cc" />
     <ClCompile Include="..\source\Hash.cpp" />
     <ClCompile Include="..\source\Logger.cpp" />
     <ClCompile Include="..\source\MoveArray.cpp" />
