sparcraft gui updated

--- a/SparCraft/VisualStudio/SparCraft_main.vcxproj
+++ b/SparCraft/VisualStudio/SparCraft_main.vcxproj
@@ -126,14 +126,14 @@
     <ClInclude Include="..\source\GUIGame.h" />
     <ClInclude Include="..\source\GUITools.h" />
     <ClInclude Include="..\source\SearchExperiment.h" />
-    <ClInclude Include="..\source\StarCraftGUI.h" />
+    <ClInclude Include="..\source\GUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\GUIGame.cpp" />
     <ClCompile Include="..\source\GUITools.cpp" />
     <ClCompile Include="..\source\main.cpp" />
     <ClCompile Include="..\source\SearchExperiment.cpp" />
-    <ClCompile Include="..\source\StarCraftGUI.cpp" />
+    <ClCompile Include="..\source\GUI.cpp" />
     <ClCompile Include="..\source\TutorialCode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
