--- a/BOSS/.gitignore
+++ b/BOSS/.gitignore
@@ -12,7 +12,10 @@ bin/*.ilk
 bin/*.txt
 bin/*.map
 bin/*.bsc
+bin/*.lib
+bin/*.gpl
 bin/gnuplot/*.gpl
 bin/gnuplot/*.txt
 source/*.o
 qtgui/*
+build-BOSSGUI-Desktop_Qt_5_6_0_MSVC2013_32bit-Release
