--- a/BOSS/VisualStudio/BOSS.vcxproj.filters
+++ b/BOSS/VisualStudio/BOSS.vcxproj.filters
@@ -46,9 +46,6 @@
     <ClCompile Include="..\source\DFBB_BuildOrderSmartSearch.cpp">
       <Filter>search\BuildOrderSearch</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\BOSSAssert.cpp">
-      <Filter>common</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\DFBB_BuildOrderSearchParameters.cpp">
       <Filter>search\BuildOrderSearch</Filter>
     </ClCompile>
@@ -99,6 +96,12 @@
     </ClCompile>
     <ClCompile Include="..\source\CombatSearch_BestResponseData.cpp">
       <Filter>search\CombatSearch</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BOSSAssert.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BOSSException.cpp">
+      <Filter>common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -165,9 +168,6 @@
     <ClInclude Include="..\source\DFBB_BuildOrderSmartSearch.h">
       <Filter>search\BuildOrderSearch</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\BOSSAssert.h">
-      <Filter>common</Filter>
-    </ClInclude>
     <ClInclude Include="..\source\DFBB_BuildOrderSearchParameters.h">
       <Filter>search\BuildOrderSearch</Filter>
     </ClInclude>
@@ -215,6 +215,12 @@
     </ClInclude>
     <ClInclude Include="..\source\CombatSearch_BestResponseData.h">
       <Filter>search\CombatSearch</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BOSSAssert.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BOSSException.h">
+      <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
