--- a/SparCraft/VisualStudio/SparCraft_main.vcxproj.filters
+++ b/SparCraft/VisualStudio/SparCraft_main.vcxproj.filters
@@ -4,25 +4,25 @@
     <ClCompile Include="..\source\main.cpp" />
     <ClCompile Include="..\source\SearchExperiment.cpp" />
     <ClCompile Include="..\source\TutorialCode.cpp" />
-    <ClCompile Include="..\source\GUITools.cpp">
+    <ClCompile Include="..\source\gui\GUI.cpp">
       <Filter>gui</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\GUIGame.cpp">
+    <ClCompile Include="..\source\gui\GUIGame.cpp">
       <Filter>gui</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\GUI.cpp">
+    <ClCompile Include="..\source\gui\GUITools.cpp">
       <Filter>gui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\SearchExperiment.h" />
-    <ClInclude Include="..\source\GUITools.h">
+    <ClInclude Include="..\source\gui\GUI.h">
       <Filter>gui</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\GUIGame.h">
+    <ClInclude Include="..\source\gui\GUIGame.h">
       <Filter>gui</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\GUI.h">
+    <ClInclude Include="..\source\gui\GUITools.h">
       <Filter>gui</Filter>
     </ClInclude>
   </ItemGroup>
