moving files to main dir

--- a/SparCraft/VisualStudio/SparCraft_main.vcxproj
+++ b/SparCraft/VisualStudio/SparCraft_main.vcxproj
@@ -126,14 +126,14 @@
     <ClInclude Include="..\source\gui\GUI.h" />
     <ClInclude Include="..\source\gui\GUIGame.h" />
     <ClInclude Include="..\source\gui\GUITools.h" />
-    <ClInclude Include="..\source\SearchExperiment.h" />
+    <ClInclude Include="..\source\main\SearchExperiment.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\gui\GUI.cpp" />
     <ClCompile Include="..\source\gui\GUIGame.cpp" />
     <ClCompile Include="..\source\gui\GUITools.cpp" />
-    <ClCompile Include="..\source\main.cpp" />
-    <ClCompile Include="..\source\SearchExperiment.cpp" />
+    <ClCompile Include="..\source\main\main.cpp" />
+    <ClCompile Include="..\source\main\SearchExperiment.cpp" />
     <ClCompile Include="..\source\TutorialCode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
