--- a/SparCraft/VisualStudio/SparCraft_main.vcxproj.filters
+++ b/SparCraft/VisualStudio/SparCraft_main.vcxproj.filters
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\source\main.cpp" />
-    <ClCompile Include="..\source\SearchExperiment.cpp" />
     <ClCompile Include="..\source\TutorialCode.cpp" />
     <ClCompile Include="..\source\gui\GUI.cpp">
       <Filter>gui</Filter>
@@ -13,9 +11,10 @@
     <ClCompile Include="..\source\gui\GUITools.cpp">
       <Filter>gui</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\main\main.cpp" />
+    <ClCompile Include="..\source\main\SearchExperiment.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\source\SearchExperiment.h" />
     <ClInclude Include="..\source\gui\GUI.h">
       <Filter>gui</Filter>
     </ClInclude>
@@ -25,6 +24,7 @@
     <ClInclude Include="..\source\gui\GUITools.h">
       <Filter>gui</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\main\SearchExperiment.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="gui">
