added SparCraft Makefile

--- a/SparCraft/Makefile
+++ b/SparCraft/Makefile
@@ -1,12 +1,12 @@
 CC=g++
+BWAPI_DIR=/home/dave/facebook/bwapi/bwapi
 SDL_LDFLAGS=`sdl-config --libs` 
 SDL_CFLAGS=`sdl-config --cflags` 
-CFLAGS=-O3 $(SDL_CFLAGS)
+CFLAGS=-O3 -std=c++11 $(SDL_CFLAGS)
 LDFLAGS=-lGL -lGLU -lSDL_image $(SDL_LDFLAGS)
-INCLUDES=-Ibwapidata/include -Isource/glfont
-SOURCES=$(wildcard bwapidata/include/*.cpp) $(wildcard source/*.cpp) 
-GLFONTSOURCE=$(wildcard source/glfont/*.cc)
-OBJECTS=$(GLFONTSOURCE:.cc=.o) $(SOURCES:.cpp=.o)
+INCLUDES=-I$(BWAPI_DIR)/include -I$(BWAPI_DIR)/include/BWAPI -I$(BWAPI_DIR)
+SOURCES=$(wildcard $(BWAPI_DIR)/BWAPILIB/Source/*.cpp) $(wildcard $(BWAPI_DIR)/BWAPILIB/*.cpp) $(wildcard source/*.cpp) source/main/main.cpp
+OBJECTS=$(SOURCES:.cpp=.o)
 
 all:SparCraft 
 
